# moxie-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Framework/: Camera.cpp  Display.cpp  Input.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  stb_image.cpp
include/: Moxie.h
include/MoxieCore/: Camera.h  ChatterBox.h  Display.h  Input.h  Mesh.h  Shader.h  Texture.h
